@@ -115,6 +115,9 @@
 #' number of topics, etc.).  Be sure to change the \code{max.em.its} argument
 #' or it will simply complete one additional iteration and stop.
 #' 
+#' You can pass a custom initialization of the beta model parameters to \code{stm}.
+#'   
+#' 
 #' The \code{control} argument is a list with named components which can be
 #' used to specify numerous additional computational details.  Valid components
 #' include: 
@@ -211,6 +214,16 @@
 #' only an approximation to the lower-bound the change can be negative at times.  Right
 #' now this triggers convergence but the final approximate bound can go higher if you
 #' are willing to wait it out.}
+#' \item{\code{custom.beta}}{If \code{init.type="Custom"} you can pass your own initialization
+#' of the topic-word distributions beta to use as an initialization.  Please note that this takes
+#' some care to be sure that it is provided in exactly the right format.  The number of topics and
+#' vocab must match exactly.  The vocab must be in the same order.  The values must not be pathological
+#' (for instance setting the probability of a single word to be 0 under all topics). The beta should be
+#' formatted in the same way as the piece of a returned stm model object \code{stmobj$beta$logbeta}.
+#' It should be a list of length the number of levels of the content covariate.  Each element of the list
+#' is a K by V matrix containing the logged word probability conditional on the topic.  If you use this
+#' option we recommend that you use \code{max.em.its=0} with the model initialization set to random, inspect
+#' the returned form of \code{stmobj$beta$logbeta} and ensure that it matches your format.}
 #' }
 #' 
 #' 
@@ -254,9 +267,10 @@
 #' covariates.  If unspecified the variables are taken from the active
 #' environment.
 #' @param init.type The method of initialization.  Must be either Latent
-#' Dirichlet Allocation ("LDA"), "Random" or "Spectral".  See details for more
-#' info. If you want to replicate a previous result, see the argument.
-#' \code{seed}.
+#' Dirichlet Allocation ("LDA"), "Random", "Spectral" or "Custom".  See details for more
+#' info. If you want to replicate a previous result, see the argument
+#' \code{seed}.  For "Custom" see the format described below under the \code{custom.beta}
+#' option of the \code{control} parameters.
 #' @param seed Seed for the random number generator. \code{stm} saves the seed
 #' it uses on every run so that any result can be exactly reproduced.  When
 #' attempting to reproduce a result with that seed, it should be specified
@@ -371,7 +385,7 @@
 #' @export
 stm <- function(documents, vocab, K, 
                 prevalence=NULL, content=NULL, data=NULL,
-                init.type=c("LDA", "Random", "Spectral"), seed=NULL, 
+                init.type=c("LDA", "Random", "Spectral", "Custom"), seed=NULL, 
                 max.em.its=500, emtol=1e-5,
                 verbose=TRUE, reportevery=5,   
                 LDAbeta=TRUE, interactions=TRUE, 
@@ -386,7 +400,7 @@ stm <- function(documents, vocab, K,
 #' @keywords internal
 stm.dfm <- function(documents, vocab, K, 
                     prevalence=NULL, content=NULL, data=NULL,
-                    init.type=c("LDA", "Random", "Spectral"), seed=NULL, 
+                    init.type=c("LDA", "Random", "Spectral", "Custom"), seed=NULL, 
                     max.em.its=500, emtol=1e-5,
                     verbose=TRUE, reportevery=5,   
                     LDAbeta=TRUE, interactions=TRUE, 
@@ -430,7 +444,7 @@ stm.dfm <- function(documents, vocab, K,
 #' @keywords internal
 stm.list <- function(documents, vocab, K, 
                      prevalence=NULL, content=NULL, data=NULL,
-                     init.type=c("LDA", "Random", "Spectral"), seed=NULL, 
+                     init.type=c("LDA", "Random", "Spectral", "Custom"), seed=NULL, 
                      max.em.its=500, emtol=1e-5,
                      verbose=TRUE, reportevery=5,   
                      LDAbeta=TRUE, interactions=TRUE, 
@@ -625,7 +639,8 @@ stm.list <- function(documents, vocab, K,
                   "gamma.ic.k",
                   "nits", "burnin", "alpha", "eta", "contrast",
                   "rp.s", "rp.p", "rp.d.group.size", "SpectralRP",
-                  "recoverEG", "maxV", "gamma.maxits", "allow.neg.change")
+                  "recoverEG", "maxV", "gamma.maxits", "allow.neg.change",
+                  "custom.beta")
   if (length(control)) {
     indx <- pmatch(names(control), legalargs, nomatch=0L)
     if (any(indx==0L))
@@ -652,14 +667,21 @@ stm.list <- function(documents, vocab, K,
       if(i=="rp.s")  settings$init$s <- control[[i]]
       if(i=="rp.p")  settings$init$p <- control[[i]]
       if(i=="rp.d.group.size")  settings$init$d.group.size <- control[[i]]
-      if(i=="SpectralRP" & control[[i]]) settings$init$mode <- "SpectralRP" #override to allow spectral rp mode
-      if(i=="recoverEG" & !control[[i]]) settings$init$recoverEG <- control[[i]]
-      if(i=="maxV" & control[[i]]) {
+      if(i=="SpectralRP" && control[[i]]) settings$init$mode <- "SpectralRP" #override to allow spectral rp mode
+      if(i=="recoverEG" && !control[[i]]) settings$init$recoverEG <- control[[i]]
+      if(i=="maxV" && control[[i]]) {
         settings$init$maxV <- control[[i]]
         if(settings$init$maxV > V) stop("maxV cannot be larger than the vocabulary")
       }
       if(i=="gamma.maxits") settings$gamma$maxits <- control[[i]]
       if(i=="allow.neg.change") settings$convergence$allow.neg.change <- control[[i]]
+      if(i=="custom.beta") {
+        if(settings$init$mode!="Custom") {
+          warning("Custom beta supplied, setting init argument to Custom.")
+          settings$init$mode <- "Custom"
+        }
+        settings$init$custom <- control[[i]]
+      }
     }
   }
   
